добавлена 3д-перспектива, тени, сменена текстура воды.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,14 @@
-
-+ 1. На картинке тёмно коричневые - это дома. Дома от сюда: European Historical City. Нужно 4 дома, можешь выбрать любые
-+ 2. Пальмы - от сюда Tropical Palm Trees Volume 1 
-+ 3. Слева коричневые круги - это столы со стульями. Их нужно взять тут: Outdoor Table
-+ 4. Лодки - вот от сюда Motorboat и от сюда SailBoat Pack (тут парусники) - сделай 5-6 штук разных в перемешку
-+ 5. Вода - в Motorboat есть вода, посмотри подойдёт или нет. Там есть water_mat и DemoWater_texture
-+ 6. Светло жёлтый - это мостовая - в ассете European Historical City в текстурах есть cobbles2_d и cobbles_walkway_d сделай любой из них
-+ 7. Сама парковка - вот тут Yughues Free Concrete Materials есть pattern11 и pattern12 - мне кажется 12 лучше будет, но ты посмотри какой лучше из них будет выглядеть как асфальт. А разметку просто белыми линиями сделай, Вектрозити например. И букву P.
-+ 8. Машинки большие (на 2 клетки) - Low Poly Car Pack - Volume One - там 5 машин, на картинке как раз 5 разных машин.
-+ 9. Маленькая машинка - в папке --547_Smart2014_FBX - там файл FBX-файл и текстуры, натяни красную.
-+ 10. Птицы - рэндомно должны пролетать птицы, но не очень часто. Они в SEAGULL
-
-По логике напоминаю:
-+ 1. Задача привести маленькую машинку к значку P. Она может двигаться в любую сторону, кроме диагоналей;
-+ 2. Большие машины двигаются только вдоль своей длины;
-+ 3. Все машины двигаются за одно движение пальцем (мышью) на 1 клетку, но любую машину могу двигать сколько угодно раз подряд, т.е. могу двигать пальцем (мышью) на несколько клеток, но при этом машина должна двигаться дискретно по одной клетке.
-+ 4. Сейчас не делаем генератор поля, делаем начальную расстановку ровно как на картинке
-+ 5. Где-нить в углу сделай кнопку "Сброс" для сброса игры в начальное состояние.
-+ 6. В конфиг - разрешение и признак полного экрана.
+1) СѓРјРµРЅСЊС€РёС‚СЊ СЂР°Р·РјРµСЂ С‚РµРєСЃС‚СѓСЂС‹ Р±СЂСѓСЃС‡Р°С‚РєРё
+2) РІРѕРґСѓ СЃРґРµР»Р°С‚СЊ РїРѕСЃРІРµС‚Р»РµР№ Рё РїРѕС‚РµРєСЃС‚СѓСЂРЅРµР№ (СЃРµР№С‡Р° РІРѕСЃРїСЂРёРЅРёРјР°РµС‚СЃВ¤ РєР°Рє СЃРёРЅВ¤В¤ РїРѕР»РѕСЃРєР°)
+3) СѓРјРµРЅСЊС€РёС‚СЊ СЂР°Р·РјРµСЂ Р»РѕРґРѕРє
+4) РґРѕР±Р°РІРёС‚СЊ СЃС‚РѕР»Р±РёРєРё РІРґРѕР»СЊ РЅР°Р±РµСЂРµР¶РЅРѕР№
+5) СЂР°Р·РјРµСЂ С‡РµСЂРµРїРёС†С‹ РЅР° РєСЂС‹С€Р°С… РїСЂРёРІРµСЃС‚Рё Рє РѕРґРЅРѕРјСѓ СЂР°Р·РјРµСЂСѓ
+6) РґРѕР±Р°РІРёС‚СЊ Р·РґР°РЅРёСЏРј РїРµСЂСЃРїРµРєС‚РёРІСѓ
+7) РІСЉРµР·Рґ РЅР° РїР°СЂРєРѕРІРєСѓ СЃРґРµР»Р°С‚СЊ СЃР±РѕРєСѓ, С‚.Рє. РјР°С€РёРЅРєР° РµР·РґРёС‚ С‚РѕР»РєРѕ РІРїРµСЂРµРґ/РЅР°Р·Р°Рґ
+8) РґР»Р±Р°РІРёС‚СЊ Р±РѕР»СЊС€Рµ СЂР°СЃС‚РёС‚РµР»СЊРЅРѕСЃС‚Рё
+9) РјРµР±РµР»СЊ Р»РµС‚РЅРµРіРѕ РєР°С„Рµ СЃРґРµР»Р°С‚СЊ РґСЂСѓРіРѕРіРѕ С†РІРµС‚Р° Р§ СЃРµР№С‡Р°СЃ СЃР»РёРІР°РµС‚СЃВ¤ СЃ Р±СЂСѓСЃС‡Р°С‚РєРѕР№
+10) РґРѕР±Р°РІРёС‚СЊ РїСЂРѕР»РµС‚Р°СЋС‰РёРµ РѕР±Р»Р°РєР°, С‚РѕР»СЊРєРѕ РѕРЅРё РЅРµ РґРѕР»Р¶РЅС‹ РїСЂРѕР»РµС‚Р°С‚СЊ РЅР°Рґ РёРіСЂРѕРІС‹Рј РїРѕР»РµРј
+11) РґРѕР±Р°РІРёС‚СЊ СЃРѕР»РЅРµС‡РЅРѕРіРѕ (С‚РµРїР»РѕРіРѕ) СЃРІРµС‚Р°
+12) РѕС‚РґРµР»РёС‚СЊ РїР°СЂРєРѕРІРєСѓ РѕС‚ Р±СЂСѓСЃС‡Р°С‚РєРё Р±Р°СЂРґСЋСЂРѕРј
+13) РјР°С€РёРЅРєРё РїРѕРєР° РЅРµ С‚СЂРѕРіР°СЋ РёР±Рѕ РѕРЅРё РµС‰Рµ РЅРµ СЃРѕРіР»Р°СЃРѕРІР°РЅС‹
+14) РґРѕР±Р°РІРёС‚СЊ РІ СЃС†РµРЅСѓ С‚РµРЅРё
