- бордюры - стрелка на въезде парковки - облака - анимации моря, лодок и деревьев

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,14 @@
-1) уменьшить размер текстуры брусчатки
-2) воду сделать посветлей и потекстурней (сейча воспринимаетс¤ как син¤¤ полоска)
-3) уменьшить размер лодок
-4) добавить столбики вдоль набережной
-5) размер черепицы на крышах привести к одному размеру
-6) добавить зданиям перспективу
-7) въезд на парковку сделать сбоку, т.к. машинка ездит толко вперед/назад
-8) длбавить больше растительности
-9) мебель летнего кафе сделать другого цвета Ч сейчас сливаетс¤ с брусчаткой
-10) добавить пролетающие облака, только они не должны пролетать над игровым полем
-11) добавить солнечного (теплого) света
-12) отделить парковку от брусчатки бардюром
-13) машинки пока не трогаю ибо они еще не согласованы
-14) добавить в сцену тени
++ 1) уменьшить размер текстуры брусчатки
++ 2) воду сделать посветлей и потекстурней (сейча воспринимаетс¤ как син¤¤ полоска)
++ 3) уменьшить размер лодок
++ 4) добавить столбики вдоль набережной
++ 5) размер черепицы на крышах привести к одному размеру
++ 6) добавить зданиям перспективу
++ 7) въезд на парковку сделать сбоку, т.к. машинка ездит толко вперед/назад
++ 8) длбавить больше растительности
++ 9) мебель летнего кафе сделать другого цвета Ч сейчас сливаетс¤ с брусчаткой
++ 10) добавить пролетающие облака, только они не должны пролетать над игровым полем
++ 11) добавить солнечного (теплого) света
++ 12) отделить парковку от брусчатки бардюром
++ 13) машинки пока не трогаю ибо они еще не согласованы
++ 14) добавить в сцену тени
